[b]2.28[/b]
*Updated libTourist. Contains the new scaled laveling
*Added Wakening Essence
*RightClicking the location panel will open LocationPlus options
*Added support for !ClassColors addon
*Files and functions restruction

[b]2.27[/b]
*LibTourist update

[b]2.26[/b]
*Added Veiled Argunite token
*LibTourist update

[b]2.25[/b]
*toc update for patch 7.3
*Updated the tokens table

[b]2.24[/b]
*Fixed a tooltip icon error

[b]2.23[/b]
*toc update for patch 7.2

[b]2.22[/b]
*LibTourist update to r190
*Added Seal of Broken Fate (Bonus Rolls) to the currencies

[b]2.21[/b]
*Fixed coords creation when in instance

[b]2.20[/b]
*Added option to hide Blizzard ZoneText
*toc update for patch 7.1
*LibTourist update

[b]2.19[/b]
*Updated French and Spanish locales
*Fixed a visual glitch on texts
*LibTourist update

[b]2.18[/b]
*LibTourist update. Fixes the recommended zones for Legion

[b]2.17[/b]
*Updated professions cap

[b]2.16[/b]
*Update LibTourist to r184. This contains the Broken Isles continent
*Added the Nethershard tokens

[b]2.15[/b]
*Added Legion currencies

[b]2.14[/b]
*toc update for Legion

[b]2.13[/b]
*Cached more Blizzard functions

[b]2.12[/b]
*Cached Blizzard functions

[b]2.11[/b]
*Added the new Valor Token

[b]2.10[/b]
*Added Login Message option (Credit Merathilis)
*Update deDE locales (Credit Merathilis)
*Added Timewarped Badge (6.22) token

[b]2.09[/b]
*LibTourist update r181
- Updated TOC to 60200
- Added Hellfire Citadel raid. Because this is a duplicate name with the Hellfire Citadel complex in Hellfire Peninsula, Outland, the raid is added to the mechanism that handles duplicate names, and is identified by LibTourist as "Hellfire Citadel (Draenor)".

[b]2.08[/b]
*toc update for WoD patch 6.2

[b]2.07[/b]
*toc update for WoD patch 6.1 

[b]2.06[/b]
*Fixed main panel layering level when placed above minimap.
*LibTourist update to 6r1

[b]2.05[/b]
*LibTourist update to 6.01b

[b]2.04[/b]