@@ -17,6 +17,7 @@ P['locplus'] = {
 	['displayOther'] = "RLEVEL",
 	['showicon'] = true,
 	['hidecoords'] = false,
+	['hidecoordsInInstance'] = true,
 	['zonetext'] = true,
 -- Tooltip
 	['tt'] = true,
@@ -143,19 +144,24 @@ function LP:AddOptions()
 						name = L["Hide Coords"],
 						desc = L["Show/Hide the coord frames"],
 						type = 'toggle',
-						width = "full",	
+						set = function(info, value) E.db.locplus[ info[#info] ] = value; LP:HideCoords() end,					
+					},
+					hidecoordsInInstance = {
+						order = 3,
+						name = L["Hide Coords in Instance"],
+						type = 'toggle',
+						disabled = function() return E.db.locplus.hidecoords end,
 						set = function(info, value) E.db.locplus[ info[#info] ] = value; LP:HideCoords() end,					
 					},
 					dig = {
-						order = 3,
+						order = 4,
 						name = L["Detailed Coords"],
 						desc = L["Adds 2 digits in the coords"],
 						type = 'toggle',
-						width = "full",	
 						set = function(info, value) E.db.locplus[ info[#info] ] = value; LP:CoordsDigit() end,					
 					},
 					displayOther = {
-						order = 4,
+						order = 5,
 						name = OTHER,
 						type = 'select',
 						desc = L["Show additional info in the Location Panel."],
@@ -167,13 +173,13 @@ function LP:AddOptions()
 							},			
 					},
 					showicon = {
-						order = 5,
+						order = 6,
 						name = EMBLEM_SYMBOL,
 						type = 'toggle',
 						disabled = function() return E.db.locplus.displayOther == 'NONE' end,					
 					},					
 					mouseover = {
-						order = 6,
+						order = 7,
 						name = L["Mouse Over"],
 						desc = L["The frame is not shown unless you mouse over the frame."],
 						type = 'toggle',
@@ -181,7 +187,7 @@ function LP:AddOptions()
 						set = function(info, value) E.db.locplus[ info[#info] ] = value; LP:MouseOver() end,					
 					},
 					malpha = {
-						order = 7,
+						order = 8,
 						type = "range",
 						name = L["Alpha"],
 						desc = L["Change the alpha level of the frame."],
